Changed contact email addresses to Python@imperial.ac.uk

--- a/C_Y1/exercises1/exercise_1.ipynb
+++ b/C_Y1/exercises1/exercise_1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e2e0a229b8e6eec0b8a66157a4e98aabafd6cf555241784d3a3088f2bcee5c4e"
+  "signature": "sha256:5405f5704863a74b5b44b2ac5fb5b110c353a6d259b9247553b068f9f29d0b1b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
+      "[Clyde Fare](mailto:python@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:python@imperial.ac.uk), Imperial College London\n",
       "\n",
       "This notebook is adapted from material by Andrew McKinley, Niall Jackson, Oliver Robotham, and Paul Wilde, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
