--- a/C_Y1/exercises2/exercise_2.ipynb
+++ b/C_Y1/exercises2/exercise_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:085d7b7e9f1b090cc7121d99f5d2ba99a5ed7a7fdde959812b4b7e4dfd20245e"
+  "signature": "sha256:e174f8ae50abe138e1aa42364c8c4599bd2c4b67e168c17bc57c23731ddb9021"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
+      "[Clyde Fare](mailto:python@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:python@imperial.ac.uk), Imperial College London\n",
       "\n",
       "This notebook includes experimental data provided by Zita Martins, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
