--- a/C_Y1/workshop1/workshop_1.ipynb
+++ b/C_Y1/workshop1/workshop_1.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:71ed102c634456b673bd14da7a93e552e1a50e59f428faed571173186fce7f74"
+  "signature": "sha256:0ebecd493a7d586a237e30dd285ad24930012a0160a0a09539de3afaf2628cda"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "metadata": {},
      "source": [
       "# An Introduction to plotting in Python Workshop 1\n",
-      "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
+      "[Clyde Fare](mailto:python@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:python@imperial.ac.uk), Imperial College London\n",
       "\n",
       "\n",
       "This notebook is based on materia from Catherine Devlin, Nicolas P. Rougier, and the sci-py lectures and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
