--- a/C_Y1/workshop2/workshop_2.ipynb
+++ b/C_Y1/workshop2/workshop_2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:c815af515342b20ab4f07d5cf8c3b0b02d0ca6518b1a4325ac1d247aedb8cddd"
+  "signature": "sha256:954a6c8c2c878b11a24a3c79954aed7eeb6e3e9b6d9d0e4562266bc4ebdec780"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "metadata": {},
      "source": [
       "# An Introduction to Plotting and Data Analysis in Python: Workshop 2\n",
-      "[Clyde Fare](mailto://c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://malhado@imperial.ac.uk), Imperial College London. \n",
+      "[Clyde Fare](mailto://python@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://python@imperial.ac.uk), Imperial College London. \n",
       "\n",
       "This notebook is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
