--- a/C_Y1/workshop3/workshop_3.ipynb
+++ b/C_Y1/workshop3/workshop_3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:6ee54831eb11c49f1091d2e9c32da2c32e1ea7237dc090922fc96a904cf71f96"
+  "signature": "sha256:b2ad088bcaf39ece1ac3431e1382edaf30002c85810ef0a0ba21f5c9936dbd33"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "metadata": {},
      "source": [
       "# An Introduction to Plotting and Data Analysis in Python Workshop 3\n",
-      "[Clyde Fare](mailto://c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://malhado@imperial.ac.uk), Imperial College London. \n",
+      "[Clyde Fare](mailto://python@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://python@imperial.ac.uk), Imperial College London. \n",
       "\n",
       "This notebook includes material adapted from Dr. Johansson's scientific Python lectures and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
