Splitting exercise 2 into sections

--- a/workshop3/workshop_3.ipynb
+++ b/workshop3/workshop_3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:b2ad088bcaf39ece1ac3431e1382edaf30002c85810ef0a0ba21f5c9936dbd33"
+  "signature": "sha256:b39ab736338432f95f5a48ea6088223fbecf39851330b86cd7618caaf60f1021"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1385,9 +1385,51 @@
       "\n",
       "The file [linear_data.txt](linear_data.txt) contains some data we want to fit a straight line to, similar to the example we used to illustrate polyfit in workshop 2 (under the \"Fitting\" heading). \n",
       "\n",
-      "* Load the data and produce a plot of the points.\n",
-      "* Using the syntax we learned above define a function *f_x* to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, along with two parameters: the gradient and the intercept.\n",
-      "* Use *curve_fit* and your *f_x* to determine the parameters the best fitting straight line.\n",
+      "* Load the data and produce a plot of the points."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Using the syntax we learned above define a function *f_x* to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, along with two parameters: the gradient and the intercept."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Use *curve_fit* and your *f_x* to determine the parameters the best fitting straight line."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "* Use the gradient and intercept you obtain to add a straight line of best fit to your plot of the data points."
      ]
     },
